<resources>
    <string name="app_name">TicKats</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_account">TicKats</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="account">Account</string>
    <string name="tickets">Tickets</string>
    <string name="contacts">Contacts</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_id">Employee ID</string>
    <string name="surname">Surname</string>
    <string name="surname">Surname</string>
    <string name="firstname">firstname</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="last_name">Last Name</string>
    <string name="profilepic">profilepic</string>
    <string name="hoursworked">hoursworked</string>
    <string name="hours_worked1">Hours Worked:</string>
    <string name="hours_worked">Hours Worked:</string>
    <string name="hours">Hours</string>
    <string name="clock_in_out">Clock In/Out</string>

</resources>
